@@ -72,6 +72,7 @@ Enhancements
 Changes
  * Replaced deprecated Bio.pairwise2 with Bio.align.PairwiseAligner in
    MDAnalysis.analysis.align.sequence_alignment (Issue #3950)
+ * Increased minimal version of biopython to 1.80 (Issue #3950)
  * Moved `libmdanalysis` cython header to `lib`(Issue #3912, PR #3913)
  * Auxiliary; determination of representative frames: The default value for
    cutoff is now None, not -1. Negative values are now turned
